# ScanBackup

./: .gitignore  COMMAND.md  COMMANDS.md  DOCUMENTATION.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
config/: config.py
constants/: __init__.py  about.py  fields.py  group.py  header.py  layers.py  path.py  system.py
controllers/: __init__.py  borde.py  summary.py
database/: __init__.py  __main__.py  postgres.py
database/constant/: fields.py  tables.py
database/schema/: border.py  bras.py  caching.py  ipbras.py  rai.py
database/schemas/: borde.py  bras.py  caching.py  dailyReport.py  ipHistory.py  rai.py
database/utils/: adapter.py
docs/: TODO.md
handler/: __init__.py  bbip.py  borde.py  bras.py  caching.py  dailyReport.py  layer.py  rai.py  scan.py  traffic.py
model/: __init__.py  bbip.py  boder.py  borde.py  bras.py  caching.py  dailyReport.py  layer.py  rai.py  reports.py  trafficHistory.py
reports/: __init__.py  summary.py
routines/: Rdiario.py  capa  captura-data.sh
scanbackup/: __main__.py
scanbackup/constants/: __init__.py  fields.py  header.py  layers.py  path.py
scanbackup/database/: __init__.py  __main__.py
scanbackup/handler/: __init__.py  bbip.py  layer.py
scanbackup/model/: __init__.py  bbip.py  dailySummary.py
scanbackup/reports/: __init__.py  summary.py
scanbackup/routines/: daily.py  scan.sh  scanner.sh
scanbackup/test/: __init__.py
scanbackup/updater/: __init__.py  __main__.py  updater.py
scanbackup/utils/: __init__.py
storage/: __main__.py
storage/constant/: fields.py  tables.py
systemgrd/: __main__.py  requirements.txt
systemgrd/constants/: path.py  (+4 more)
test/: __init__.py
updater/: __init__.py  __main__.py  update.py
utils/: __init__.py  calculate.py  config.py  excel.py  log.py  translate.py  trasform.py  validate.py
(+275 files in other folders)
