[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "systemgrd"
version = "0.1.0"
description = "Sistema GRD"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Jesus Marañon", email = "jmaranonr@gmail.com"},
    { name = "Angyee Marin", email = "angyeemarin.dev@gmail.com" }
]
keywords = ["grd", "network", "data-processing"]
dependencies = [
    "art>=6.4",
    "beautifulsoup4>=4.13",
    "click>=8.1.8",
    "fastapi>=0.115.12",
    "fastapi-cli>=0.0.7",
    "html5lib>=1.1",
    "lxml>=6.0",
    "openpyxl>=3.1.5",
    "pandas>=1.3.0",
    "pydantic>=2.10.6",
    "pymongo>=4.11.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32",
    "rich>=13.9.4",
    "unidecode>=1.4.0",
    "uvicorn>=0.34.3"
]
urls = { Homepage = "https://github.com/xanv754/SystemCGPRD" }

[project.optional-dependencies]
dev = ["black"]

[tool.setuptools]
packages = ["systemgrd"]